--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "ruspiro-kernel"
 authors = ["André Borrmann <pspwizard@gmx.de>"]
-version = "0.0.3" # remember to update html_root_url
+version = "0.1.0" # remember to update html_root_url
 description = "This crate showcases the usage of the different RusPiRo crates to build a baremetal kernel for Raspberry Pi 3"
 license = "Apache-2.0"
-repository = "https://github.com/RusPiRo/ruspiro-kernel/tree/v0.0.3"
-documentation = "https://docs.rs/ruspiro-kernel/0.0.3"
+repository = "https://github.com/RusPiRo/ruspiro-kernel/tree/v0.1.0"
+documentation = "https://docs.rs/ruspiro-kernel/0.1.0"
 readme = "README.md"
 keywords = ["RusPiRo", "raspberrypi", "baremetal", "kernel", "32bit"]
 categories = ["no-std", "embedded"]
@@ -22,6 +22,6 @@ path = "src/kernel.rs"
 [dependencies]
 ruspiro-boot = { version = "0.0.3", features = ["with_panic", "with_exception"] }
 ruspiro-gpio = "0.0.2"
+ruspiro-mailbox = "0.0.2"
 ruspiro-uart = "0.0.3"
-ruspiro-singleton = "0.0.2"
-ruspiro-allocator = "0.0.2"
+ruspiro-console = { version = "0.0.2", features = ["with_allocator"] }
