--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "ruspiro-kernel"
 authors = ["André Borrmann <pspwizard@gmx.de>"]
-version = "0.1.0" # remember to update html_root_url
+version = "0.2.0" # remember to update html_root_url
 description = "This crate showcases the usage of the different RusPiRo crates to build a baremetal kernel for Raspberry Pi 3"
 license = "Apache-2.0"
-repository = "https://github.com/RusPiRo/ruspiro-kernel/tree/v0.1.0"
-documentation = "https://docs.rs/ruspiro-kernel/0.1.0"
+repository = "https://github.com/RusPiRo/ruspiro-kernel/tree/v0.2.0"
+documentation = "https://docs.rs/ruspiro-kernel/0.2.0"
 readme = "README.md"
 keywords = ["RusPiRo", "raspberrypi", "baremetal", "kernel", "32bit"]
 categories = ["no-std", "embedded"]
@@ -20,8 +20,15 @@ name = "kernel7"
 path = "src/kernel.rs"
 
 [dependencies]
-ruspiro-boot = { version = "0.0.3", features = ["with_panic", "with_exception"] }
-ruspiro-gpio = "0.0.2"
-ruspiro-mailbox = "0.0.2"
-ruspiro-uart = "0.0.3"
-ruspiro-console = { version = "0.0.2", features = ["with_allocator"] }
+ruspiro-boot = { version = "0.1.0", features = ["with_panic", "with_exception"] }
+ruspiro-gpio = "0.1.0"
+ruspiro-register = "0.1.1"
+ruspiro-uart = { version = "0.1.0" }
+ruspiro-console = { version = "0.1.1", features = ["with_allocator"] }
+ruspiro-mailbox = "0.1.0"
+ruspiro-timer = "0.1.0"
+ruspiro-interrupt = "0.1.0"
+
+[features]
+default = ["ruspiro_pi3"]
+ruspiro_pi3 = ["ruspiro-gpio/ruspiro_pi3", "ruspiro-mailbox/ruspiro_pi3", "ruspiro-timer/ruspiro_pi3", "ruspiro-uart/ruspiro_pi3", "ruspiro-interrupt/ruspiro_pi3"]
