--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,10 @@ matrix:
 script:
   cargo build --target armv7-unknown-linux-gnueabihf --verbose
 
+before_install:
+  - shopt -s expand_aliases
+
 install:
   - sudo apt-get install gcc-arm-linux-gnueabihf g++-arm-linux-gnueabihf
-  - alias arm-eabi-gcc = arm-linux-gnueabihf-gcc
+  - alias arm-eabi-gcc="arm-linux-gnueabihf-gcc"
   - rustup target add armv7-unknown-linux-gnueabihf
