--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,10 @@ matrix:
 script:
   cargo build --target armv7-unknown-linux-gnueabihf --verbose
 
+before_install:
+# clone ruspiro-boot before build as it contains the linker script needed..
+  - git clone https://github.com/RusPiRo/ruspiro-boot.git
+
 install:
   - sudo apt-get install gcc-arm-linux-gnueabihf g++-arm-linux-gnueabihf
   - rustup target add armv7-unknown-linux-gnueabihf
