--- a/.travis.yml
+++ b/.travis.yml
@@ -14,16 +14,17 @@ matrix:
       env: 
         - TARGET=armv7-unknown-linux-gnueabihf
         - CFLAGS='-std=c11 -mfpu=neon-fp-armv8 -mfloat-abi=hard -march=armv8-a -Wall -O3 -nostartfiles -ffreestanding -mtune=cortex-a53'
-        - RUSTFLAGS='-C linker=arm-linux-gnueabihf-gcc -C target-cpu=cortex-a53 -C target-feature=+a53,+fp-armv8,+v8,+vfp3,+d16,+thumb2,+neon -C link-arg=-nostartfiles -C link-arg=-T./ruspiro-boot/link.ld -C opt-level=3'
+        - RUSTFLAGS='-C linker=arm-linux-gnueabihf-gcc -C target-cpu=cortex-a53 -C target-feature=+a53,+fp-armv8,+v8,+vfp3,+d16,+thumb2,+neon -C link-arg=-nostartfiles -C link-arg=-T./ruspiro-boot/link.ld -C opt-level=3 -C debuginfo=0'
 
 script:
-  cargo build --target armv7-unknown-linux-gnueabihf --verbose
+  cargo xbuild --target armv7-unknown-linux-gnueabihf --verbose --all
 
 before_install:
 # clone ruspiro-boot before build as it contains the linker script needed..
+# the folder it will be cloned into is ./ruspiro-boot
   - git clone https://github.com/RusPiRo/ruspiro-boot.git
 
 install:
   - sudo apt-get install gcc-arm-linux-gnueabihf g++-arm-linux-gnueabihf
-  - ls
+  - cargo install cargo-xbuild
   - rustup target add armv7-unknown-linux-gnueabihf
