--- a/.travis.yml
+++ b/.travis.yml
@@ -11,13 +11,8 @@ matrix:
 
   include:
     - rust: nightly
-      env: 
-        - TARGET=armv7-unknown-linux-gnueabihf
-        - CFLAGS='-std=c11 -mfpu=neon-fp-armv8 -mfloat-abi=hard -march=armv8-a -Wall -O3 -nostartfiles -ffreestanding -mtune=cortex-a53'
-        - RUSTFLAGS='-C linker=arm-linux-gnueabihf-gcc -C target-cpu=cortex-a53 -C target-feature=+a53,+fp-armv8,+v8,+vfp3,+d16,+thumb2,+neon -C link-arg=-nostartfiles -C link-arg=-T./ruspiro-boot/link.ld -C opt-level=3 -C debuginfo=0'
 
-script:
-  cargo xbuild --target armv7-unknown-linux-gnueabihf --verbose --all
+script: ./travis-build.sh
 
 before_install:
 # clone ruspiro-boot before build as it contains the linker script needed..
@@ -25,6 +20,9 @@ before_install:
   - git clone https://github.com/RusPiRo/ruspiro-boot.git
 
 install:
+# install cross compiler toolchain
   - sudo apt-get install gcc-arm-linux-gnueabihf g++-arm-linux-gnueabihf
+# install cargo xbuild to proper cross compile  
   - cargo install cargo-xbuild
+# add the build target used for Raspbarry Pi targeting builds
   - rustup target add armv7-unknown-linux-gnueabihf
