yet another try ...

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,3 +26,4 @@ install:
   - cargo install cargo-xbuild
 # add the build target used for Raspbarry Pi targeting builds
   - rustup target add armv7-unknown-linux-gnueabihf
+  - sudo chmod ugo+x ./travis-build.sh
